# DevilDex

./: .gitattributes  .gitignore  README.md  app.py  pyproject.toml
backend/: app.py  db_setup.py  package.json  requirements.txt
backend/src/: app.py  db_setup.py
backend/tests/: test_db_connection.py  test_dbconnection.py
frontend/: package-lock.json  package.json
vscode/: settings.json
